			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04o: *********************************

BUG: (5/30/06, SMR) IRSIM stimuli can get out of order.
FIX: In Analyser.newVector(), change the line
		afterSV.value = curTime + stepSze - insertTime / cmdFileUnits;
     to be:
		afterSV.value = (curTime + stepSze - insertTime) / cmdFileUnits;

BUG: (5/30/06, SMR) Waveform window crashes when too many panels (Bug #1071)
FIX: Fixed default panel sizes.  Also fixed other bugs in waveform window.

IMP: (5/30/06, DN) Refactoring of redisplay code. Class PixelDrawing_ for new redisplay code. 

IMP: (5/30/06, DN) Client Electric connects to a server machine specified in command-line "-client <serverMachineName>".

FIX: (5/26/06, RK) NCC: fix for regression failure 060526_0000

FIX: (5/26/06, RK) NCC: "Copy schematic names to layout" didn't copy names of both nets connected by polysilicon resistor (Bugzilla# 1069)

IMP: (5/26/06, RK) NCC: new annotation: forcePartMatch (Bugzilla# 713)

IMP: (5/26/06, SMR) When adding an export to a schematic, new icon export
     uses standard lead lengths. (Bug #902).

IMP/MAN: (5/26/06, SMR) Added new context-menu item in explorer tree:
     Cell Groups can be duplicated, copying everything in the group (Bug #894).

IMP/MAN: (5/26/06, SMR) Added command "Window / Special Pan / Match Other Window
     in X, Y, and Scale" to do all window matching at once (Bug #808).

BUG: (5/26/06, SMR) Undoing mimic stitching may trigger new stitching (Bug #1055).
FIX: In UserInterfaceMain.DatabaseChangeRun fixed spelling error, use "undoRedo"
     in call to "endBatch()".

BUG: (5/26/06, SMR) Crossprobing fails when there is an extra level of names
     in the simulation output file (Bug #1067)
FIX: In WaveformWindow.crossProbeWaveformToEditWindow() and findSelectedSignals()
     handle extra cell name in the signal names.
